# Hydraulics

./: .dockerignore  .gitignore  .gitignore.txt  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  app_db.py  debug.py  docker-compose.yml  entrypoint.sh  init_db.py  main.py  pyproject.toml
Cylinder/: app.py  cylinder.json  cylinder.py  debug.py  options.py  parameters.py  primer.py
Cylinder/JsonFiles/: 7515_Kantovatel.json  7535_PRESTEL.json  7535_Prestel.json  P2_меньше_P!.json  Sasha.json  Sasha2.json  cylinder.json
Cylinder/testing/: 1_testing_file.json
Motor/: app.py  motor.py  parameters.py
Motor/JsonFales/: 1.0 test_motor.json
Motor/JsonFiles/: 1.0 test_motor.json
Pump/: app.py  parameters.py  pump.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py  utils.py
backend/src/api/: deps.py  routes.py
backend/src/api/v1/: files.py  login.py  users.py
backend/src/core/: config.py  security.py
backend/src/db/: init_db.py  session.py  try_init_db.py
backend/src/envs/example/: .env_dev  .env_local
backend/src/migrations/: env.py
backend/src/models/: __init__.py  base.py  directories.py  files.py  user.py
backend/src/repositories/: __init__.py  enums.py  file.py  sqlalchemy_.py  user.py
backend/src/schemas/: __init__.py  file.py  user.py
backend/src/services/: base.py  file.py
core/: config.py
db/: init_db.py  session.py
envs/: .env_dev
interfaces/: repository.py
models/: __init__.py  base.py  directories.py  files.py  user.py
repositories/: __init__.py  base.py  enums.py  file.py  my__init__.py  sqlalchemy.py
resources/: constants.py
schemas/: __init__.py  file.py
services/: base.py  file.py
src/core/: config.py
src/db/: init_db.py  session.py
src/migrations/: env.py
src/migrations/versions/: 57d4330090a4_create_tables_user_file_directory.py
src/models/: __init__.py  base.py  directories.py  files.py  user.py
src/repositories/: enums.py  file.py  my__init__.py  sqlalchemy.py  sqlalchemy_.py
src/schemas/: __init__.py  file.py
utils/: _app.py  options.py  parameters.py
web_app/: user.py
web_app/Cylinder/: app.py  cylinder.py  options.py  parameters.py
web_app/Motor/: app.py  motor.py  parameters.py
web_app/Pump/: app.py  parameters.py  pump.py
web_app/requests/: req_file.py  req_user.py
web_app/utils/: _app.py  options.py  parameters.py  settings_gui.py
(+1 files in other folders)
