[tool.poetry]
name = "fastapi-auth-service"
version = "0.1.0"
description = ""
authors = ["vano50 <balabanski.v@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_auth_service"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastAPI stuff
fastapi="^0.103.1"
uvicorn="^0.23.2"
pydantic="1.10.12"
# Database stuff
SQLAlchemy="^1.4.41"
sqlmodel="^0.0.8"
alembic="^1.12.0"
asyncpg="^0.28.0 "
aioredis="^2.0.1"
aiosqlite="^0.19.0"
# Env
python-dotenv="^1.0.0"
# JWT
pyjwt="^2.8.0"
# etc
email-validator="^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.2"
webtest = "^3.0.0"
factory-boy = "^3.3.0"
pdbpp = "*"
# Lint and code style
mypy="*"
black="^23.9.1"
flake8="*"
flake8-blind-except="*"
flake8-debugger="*"
flake8-docstrings="*"
flake8-isort="*"
# fix dep
pyreadline="^2.1"
isort="*"
# venv management
tox="*"
# mypy
#sqlalchemy2-stubs="*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
